--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,8 @@ default: &default
 
 development:
   <<: *default
-  database: my_contact_book
+  url: postgres://student:postgres@localhost:5432/my_contact_book
+  #database: my_contact_book
     
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
